--- a/ranking.html
+++ b/ranking.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ranking</title>
+  <title>Ranking - Gymkana Jujutsu Kaisen</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body class="background">
   <h1>Ranking en Tiempo Real</h1>
   <div id="ranking"></div>
   <script src="script.js"></script>
