--- a/scan.html
+++ b/scan.html
@@ -12,7 +12,7 @@
   <a href="ranking.html">Ver Ranking</a>
   <script src="script.js"></script>
   <script>
-    if (!getCurrentUser() || getCurrentUser() === 'admin') {
+    if (!getCurrentUser() || getCurrentUser() === 'admin2025') {
       alert("Debes estar registrado como jugador para escanear códigos QR.");
       window.location.href = 'index.html';
     } else {
