--- a/ranking.html
+++ b/ranking.html
@@ -3,24 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ranking - Gymkana Jujutsu Kaisen</title>
+  <title>Ranking</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body class="background">
   <h1>Ranking en Tiempo Real</h1>
   <div id="ranking"></div>
-  <div id="userDetails" style="margin-top: 2em;"></div>
-  <div id="adminControls" style="margin-top:2em; display:none">
+  <div id="userDetails"></div>
+  <div id="adminControls" style="display:none; margin-top:2em;">
     <button onclick="startGymkana()">Iniciar Gymkana</button>
     <button onclick="endGymkana()">Terminar Gymkana</button>
     <button onclick="resetRanking()">Reiniciar Ranking</button>
   </div>
-  <script src="script.js"></script>
-  <script>
-    renderRanking();
-    if (getCurrentUser() === 'admin2025') {
-      document.getElementById('adminControls').style.display = 'block';
-    }
-  </script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
